2007-05-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-save.c
	* plug-ins/jpeg/jpeg-load.c: reduced number of progress updates.

2007-05-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu.c (script_fu_extension_init):
	renamed "Utils" to "Utilities".

2007-05-15  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/contactsheet.scm: Use 'img' and not
	'new-img' in make-thumbnail-size routine. Moved menu entry from
	Xtns/Utils to Xtns/Utilities. See bug #132532.

2007-05-15  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpheal.c (gimp_heal_motion): convert the source
	region to the dest region's type, not the other way around
	(using the wrong if() condition when doing so). Fixes bug #390938.

2007-05-15  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scheme-wrapper.c (marshall_proc_db_call): Allow
	any number type in a vector to be passed in PDB call as an INT*ARRAY.
	Updated error messages accordingly. Fixes bug #435640.

2007-05-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c (browser_dialog_open): don't show
	the window yet. The user might not have the help pages installed.

	* plug-ins/helpbrowser/wilber-reading.png: use the new style Wilber.

2007-05-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/wmf.c
	* plug-ins/fits/fits.c
	* plug-ins/sel2path/sel2path.c
	* plug-ins/xjt/xjt.c: added missing calls to
	gimp_window_set_transient().

2007-05-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/svg.c
	* plug-ins/common/tiff-load.c
	* plug-ins/common/postscript.c
	* plug-ins/common/poppler.c: added missing calls to
	gimp_window_set_transient().

	* libgimp/gimppixbuf.c (gimp_layer_new_from_pixbuf): reduced
	number of progress updates.

2007-05-14  Michael Natterer  <mitch@gimp.org>

	* app/file/file-utils.c (file_utils_filename_to_uri): fix check on
	the GError returned by file_utils_filename_is_uri().

2007-05-14  Michael Natterer  <mitch@gimp.org>
